--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Wallet</title>
         <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <!-- Meta Tags-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
